feat: login user handler and export route
