# modules/user/api/model/res/login_user_res.go
@@ -1,0 +1,10 @@
+package res
+
+type LoginUserRes struct {
+	FullName     string `json:"full_name"`
+	Email        string `json:"email"`
+	Phone        string `json:"phone"`
+	Status       string `json:"status"`
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token"`
+}
